--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p class='main-para'>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
     </main>
     <footer>
-        <p>Analina Del Vecchio</p>
+        <p>Analina Del Vecchio espero que funcione</p>
     </footer>  
 </body>
 </html>
