correccion de errores html

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -5,5 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="styles/styles.css">
-</head> 
+</head>
+<body>
+    <header>
+      <h1>About me:<cite>Analina Del Vecchio</cite></h1>
+    </header>
+    <main> 
+    <img src="images/love.png" width="300" height="300" alt="logo" title="Analina Del Vecchio">
+    <blockquote>
+      <p>
+      <p>Hello everyone, my name as it says above is Analina, you can call me Ana, I am from Venezuela and I currently</p>
+      <p>live in the state of Washington with my husband. I have been a member of the Church of Jesus Christ since I was a </p>
+      <p>child, that has been a blessing in my life 🙂. I like to design web pages. Until now, I have done it by watching</p> 
+      <p>YouTube tutorials and I have made many mistakes. I am here to improve and have a professional path. Here I share with you</p> 
+      <p>the most special moment of my life when I was sealed in the temple, I am 34 years old and I had always looked forward </p>
+      <p>to this day. It wasn't easy but I have to tell you that everything that isn't easy is really worth it. Put a lot</p> 
+      <p>of effort into your studies and the eternal things in life 🌸, this is the way.</p>
+      </p>
+    </main>
+    <footer>- Have a good week, <cite>Analina Del Vecchio</cite></footer>
+    </blockquote>
+</body>
 </html>
