correccion de errores

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -23,7 +23,9 @@
       <p>of effort into your studies and the eternal things in life 🌸, this is the way.</p>
       </p>
     </main>
-    <footer>- Have a good week, <cite>Analina Del Vecchio</cite></footer>
-    </blockquote>
+  </blockquote>
+    <footer>
+      <h3>- Have a good week, <cite>Analina Del Vecchio</cite></h3>
+    </footer>
 </body>
 </html>
