--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
   <header>
@@ -13,7 +13,7 @@
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
+    <!-- Steps 2-5 -->
     <hr>
     <h2>OVERVIEW</h2>
     <h3>Purpose</h3>
@@ -29,7 +29,7 @@
     <img src="images/raft_adventures_logo.png" alt="Logo image">
     <hr />
     <h2>STYLE GUIDE</h2>
-    <!-- ------------------------Steps 6-9------------------------------ -->
+    <!-- Steps 6-9 -->
     <h3>Color Palette</h3>
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
@@ -51,7 +51,7 @@
         <td class="accent2">[#ffffff]</td>
       </tr>
     </table>
-    <!-- ------------------------Steps 10-12------------------------------ -->
+    <!-- Steps 10-12 -->
     <h3>TYPOGRAPHY</h3>
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
     <h4>
@@ -69,7 +69,7 @@
         Do you find yourself daydreaming at work about all the fun you'll 
         have rafting next summer? That's how we are! Join our next rafting trip.
     </p>
-    <!-- ------------------------Step 13------------------------------ -->
+    <!-- Step 13 -->
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
