--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8">
   <title>Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
@@ -22,12 +22,12 @@
     <h3>Audience</h3>
     <p>Our audience is people between 18 and 60 years old who are passionate about rafting. They want to have opportunities to meet other people who share the same interests in this sport. As human beings, our nature is to be social. I would like to help fulfill the need to create connections between people. The audience of my website will use their mobile phone to a greater extent, performing searches such as: rafting near me. Our ideal audience will want to join the activities posted in the group or simply explore what's new in the world of Washington rafting.</p>
     <!-- change this -->
-    <hr/>
+    <hr>
     <h2>BRANDING</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
     <img src="images/raft_adventures_logo.png" alt="Logo image">
-    <hr />
+    <hr>
     <h2>STYLE GUIDE</h2>
     <!-- Steps 6-9 -->
     <h3>Color Palette</h3>
@@ -77,7 +77,7 @@
       <a href="#">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
-    <hr />
+    <hr>
     <h2>SITE MAP</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
@@ -90,11 +90,11 @@
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
-    <hr />
+    <hr>
     <h2>WIREFRAMES</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
     <h3>Home</h3>
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
     <h3>[Page 2]</h3>
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
