--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -26,7 +26,7 @@
     <h2>BRANDING</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/raft_adventures_logo.png" alt="Logo image">
+    <img src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
     <hr>
     <h2>STYLE GUIDE</h2>
     <!-- Steps 6-9 -->
