--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header>
-        <div> class="logobox">
+        <div class="logobox">
             <img src="images/cute.png" width="70" height="70"
             alt="logo">
         </div>
@@ -24,13 +24,13 @@
     </Header> 
     <main>
         <h1>Brigham Young University Idaho</h1>
-        <div> id="banner-box">
-            <section> class="banner">
+        <div id="banner-box">
+            <section class="banner">
                 <img src="images/cute.png" width="1000" height="300" alt="banner image desc">
                 <h2>banner 1 tittle</h2>
                 <p>banner 1 paragraph</p>
             </section>
-            <section> class="banner">
+            <section class="banner">
                 <img src="images/cute.png" width="1000" height="300" alt="banner image desc">
                 <h2>banner 2 tittle</h2>
                 <p>banner 2 paragraph</p>
