--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,6 +16,36 @@
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="#contactus.html">Contact Us</a>
         </nav>
-    </header>   
+    </header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title"> Have an Aventure</h1>
+            <h4>Make memories with Raff Aventures</h4>
+            <div class='button-box'>
+                <a class='book' href="">Book Now</a>
+            </div>
+        </section>
+    </div>
+    <main class="home-grid">
+        <section class="camping-card">
+            <img class="card-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img class="icon" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <h2>Rivers</h2>
+        </section>
+        <section class="rivers-card">
+            <img class="card-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img class="icon" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <h2>Rivers</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img class="icon" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="" alt="">
+    </main>   
 </body>
 </html>
