--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,18 +8,18 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png" alt="Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="#contactus.html">Contact Us</a>
+            <a href="#">Contact Us</a>
         </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="hero">
         </div>
         <section id="hero-msg">
             <h1 class="home-title"> Have an Aventure</h1>
@@ -31,21 +31,42 @@
     </div>
     <main class="home-grid">
         <section class="camping-card">
-            <img class="card-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
-            <img class="icon" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
-            <h2>Rivers</h2>
+            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="Camping">
+            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="Camping icon">
+            <h2>Camping</h2>
         </section>
         <section class="rivers-card">
-            <img class="card-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
-            <img class="icon" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="Rivers">
+            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="Rivers icon">
             <h2>Rivers</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
-            <img class="icon" src="images/raft_adventures_logo.png" alt="Raff Aventures Logo">
+            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="Rapids">
+            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="Rapids icon">
             <h2>Rapids</h2>
         </section>
-        <img class="mountains" src="" alt="">
-    </main>   
+        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+            <a class='join' href="site-plan-rafting.html">join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Raff Aventures &copy; 2023 - Analina Del Vecchio</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="#">Contact Us</a></p>
+        <div class="social">
+            <a href="https//facebook.com">
+                <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https//twitter.com">
+                <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https//instagram.com">
+                <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>   
 </body>
 </html>
