--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Adventures in Washington State | Home Page</title>
+    <title>Rafting Adventures in Washington State Home Page</title>
 </head>
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png" alt="Logo">
+            <img class="logo" src="images/raft_adventures_logo.png" width="150" height="150" alt="Raf Aventures logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -49,7 +49,7 @@
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-            <a class='join' href="site-plan-rafting.html">join Us</a>
+            <a class='join' href="#">join Us</a>
         </section>
     </main>
     <footer>
