--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,10 +22,10 @@
             <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="hero">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title"> Have an Aventure</h1>
-            <h4>Make memories with Raff Aventures</h4>
+            <h1 class="home-title">In Search of Adventures?</h1>
+            <h4>Be part of our community of Raft Friends!</h4>
             <div class='button-box'>
-                <a class='book' href="">Book Now</a>
+                <a class='book' href="">Join Now</a>
             </div>
         </section>
     </div>
