--- a/wwr/index.html
+++ b/wwr/index.html
@@ -47,13 +47,13 @@
         </section>
         <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="mountains">
         <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-            <a class='join' href="#">join Us</a>
+            <h2>Much More Than a Raft Trip</h2>
+            <p>Enjoy wonderful landscapes, animals, fauna, flora and the opportunity to make new friends.</p>
+            <a class='join' href="#">Join Us</a>
         </section>
     </main>
     <footer>
-        <p>Raff Aventures &copy; 2023 - Analina Del Vecchio</p>
+        <p>Raft Aventures &copy; 2023 - Analina Del Vecchio</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="#">Contact Us</a></p>
         <div class="social">
