--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <Header>
         <div class="logobox">
-            <img src="images/cute.png" width="70" height="70"
-            alt="logo">
+            <img src="images/profile.png" width="70" height="70"
+            alt="profile">
         </div>
         <nav>
             <a id="active" href="index.html">Home</a>
@@ -23,23 +23,15 @@
           </nav>
     </Header> 
     <main>
-        <h1>Brigham Young University Idaho</h1>
         <div id="banner-box">
             <section class="banner">
-                <img src="images/cute.png" width="1000" height="300" alt="banner image desc">
-                <h2>banner 1 tittle</h2>
-                <p>banner 1 paragraph</p>
-            </section>
-            <section class="banner">
-                <img src="images/cute.png" width="1000" height="300" alt="banner image desc">
-                <h2>banner 2 tittle</h2>
-                <p>banner 2 paragraph</p>
+                <img src="images/banner_1.png" width="1000" height="300" alt="banner image 1">
             </section>
         </div>
         <p class='main-para'>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
     </main>
     <footer>
-        <p>Analina Del Vecchio espero que funcione</p>
+        <p>Analina Del Vecchio</p>
     </footer>  
 </body>
 </html>
