--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 <body>
     <Header>
         <div class="logobox">
-            <img src="images/profile.png" width="70" height="70"
-            alt="profile">
+            <img src="images/profile.png" width="70" height="70" alt="profile">
         </div>
         <nav>
-            <a id="active" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="aboutme/index.html">About Me Page</a>             
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
+            <a href="#">Positioning Activity</a>
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
           </nav>
@@ -31,7 +30,7 @@
         <p class='main-para'>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
     </main>
     <footer>
-        <p>Analina Del Vecchio</p>
+        <p>Analina Del Vecchio &copy; 2023</p>
     </footer>  
 </body>
 </html>
