--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <main>
         <div id="banner-box">
             <section class="banner">
+                <h1>Web design and development</h1>
                 <img src="images/banner_1.png" width="1000" height="300" alt="banner image 1">
             </section>
         </div>
