--- a/wwr/index.html
+++ b/wwr/index.html
@@ -48,7 +48,7 @@
         <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="mountains">
         <section class="msg">
             <h2>Much More Than a Raft Trip</h2>
-            <p>Enjoy wonderful landscapes, animals, fauna, flora and the opportunity to make new friends.</p>
+            <p>Have the opportunity to enjoy the wildlife, beautiful landscapes and meet new friends.</p>
             <a class='join' href="#">Join Us</a>
         </section>
     </main>
