--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <Header>
-        <div class="logobox">
-            <img src="images/profile.png" width="70" height="70" alt="profile">
+        <div id="logobox">
+            <img src="images/profile.png" class="imagenredonda" alt="profile">
         </div>
         <nav>
             <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         <div id="banner-box">
             <section class="banner">
                 <h1>Web design and development</h1>
-                <img src="images/banner_1.png" width="1000" height="300" alt="banner image 1">
+                <img src="images/banner_1.png" alt="banner image 1">
             </section>
         </div>
         <p class='main-para'>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
