--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           </nav>
     </Header> 
     <main>
-        <div id="banner-box">
-            <section class="banner">
+        <div>
+            <section>
                 <h1>Web design and development</h1>
                 <img src="images/banner_1.png" alt="banner image 1">
             </section>
