--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="images/banner_1.png" alt="banner image 1">
             </section>
         </div>
-        <p class='main-para'>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
+        <p class="mensaje_inspirador">“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
     </main>
     <footer>
         <p>Analina Del Vecchio &copy; 2023</p>
