--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     </Header> 
     <main>
         <div>
-            <section>
-                <h1>Web design and development</h1>
+            <section class="banner">
                 <img src="images/banner_1.png" alt="banner image 1">
             </section>
         </div>
