--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="logobox">
             <img src="images/profile.png" class="imagenredonda" alt="profile">
         </div>
-        <nav>
+        <div id="navegacion">
+            <nav>
             <a href="index.html">Home</a>
             <a href="aboutme/index.html">About Me Page</a>             
             <a href="wwr/index.html">White Water Rafting Website</a>
@@ -20,6 +21,7 @@
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
           </nav>
+        </div>
     </Header> 
     <main>
         <div>
