termine el challengue

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -17,8 +17,8 @@
             <p>Education is the difference between wishing you could help others & being able to help them</p>
             <h2><cite>--- President Nelson</cite></h2>
         </div>
-        <div>
-            <ol type="1">
+        <div id="centrado">
+            <ol class="lista" type="1">
                 <li>Faith in the Lord Jesus Christ</li>
                 <li>Repentance</li>
                 <li>Baptism by immersion for the remission of sins</li>
