--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#">Positioning Activity</a>
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
-            <a href="challenge.html">challengue</a>
+            <a href="challenge/index.html">challengue</a>
           </nav>
         </div>
     </Header> 
