--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header>
-        <div id="logobox">
+        <div>
             <img src="images/profile.png" class="imagenredonda" alt="profile">
         </div>
         <div id="navegacion">
