--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <div>
             <img src="images/profile.png" class="imagenredonda" alt="profile">
         </div>
-        <div id="navegacion">
+        <div>
             <nav>
-            <a href="index.html">Home</a>
-            <a href="aboutme/index.html">About Me Page</a>             
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="#">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
-            <a href="challenge/index.html">challengue</a>
-          </nav>
+                <a href="index.html">Home</a>
+                <a href="aboutme/index.html">About Me Page</a>             
+                <a href="wwr/index.html">White Water Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+                <a href="#">Positioning Activity</a>
+                <a href="#">Personal Website</a>
+                <a href="#">Personal Siteplan</a>
+                <a href="challenge/index.html">challengue</a>
+            </nav>
         </div>
     </Header> 
     <main>
