--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,69 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Adventures in Washington State Home Page</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/raft_adventures_logo.png" width="150" height="150" alt="Raf Aventures logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="#">Contact Us</a>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="hero">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">In Search of Raft Adventures?</h1>
-            <h4>Be part of our community and make some friends!</h4>
-            <div class='button-box'>
-                <a class='book' href="">Join Now</a>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/raft_adventures_logo.png" alt="Raf Aventures logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="#">Contact Us</a>
+            </nav>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="hero">
             </div>
-        </section>
-    </div>
-    <main class="home-grid">
-        <section class="camping-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="Camping">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="Camping icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rivers-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="Rivers">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="Rivers icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="Rapids">
-            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="Rapids icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="mountains">
-        <section class="msg">
-            <h2>Much More Than a Raft Trip</h2>
-            <p>Have the opportunity to enjoy the wildlife, beautiful landscapes and meet new friends.</p>
-            <a class='join' href="#">Join Us</a>
-        </section>
-    </main>
-    <footer>
-        <p>Raft Aventures &copy; 2023 - Analina Del Vecchio</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="#">Contact Us</a></p>
-        <div class="social">
-            <a href="https//facebook.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https//twitter.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https//instagram.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
-            </a>
+            <section id="hero-msg">
+                <h1 class="home-title">In Search of Raft Adventures?</h1>
+                <h4>Be part of our community and make some friends!</h4>
+                <div class='button-box'>
+                    <a class='book' href="">Join Now</a>
+                </div>
+            </section>
         </div>
-    </footer>   
+        <main class="home-grid">
+            <section class="camping-card">
+                <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="Camping">
+                <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="Camping icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rivers-card">
+                <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="Rivers">
+                <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="Rivers icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="Rapids">
+                <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="Rapids icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div>
+            <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="mountains">
+            <section class="msg">
+                <h2>Much More Than a Raft Trip</h2>
+                <p>Have the opportunity to enjoy the wildlife, beautiful landscapes and meet new friends.</p>
+                <a class='join' href="#">Join Us</a>
+            </section>
+        </main>
+        <footer>
+            <p>Raft Aventures &copy; 2023 - Analina Del Vecchio</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="#">Contact Us</a></p>
+            <div class="social">
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>   
 </body>
 </html>
