--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </Header> 
     <main>
         <div>
-            <section class="banner">
+            <section>
                 <img src="images/banner_1.png" alt="banner image 1">
             </section>
         </div>
