--- a/wwr/index.html
+++ b/wwr/index.html
@@ -26,8 +26,8 @@
             <section id="hero-msg">
                 <h1 class="home-title">In Search of Raft Adventures?</h1>
                 <h4>Be part of our community and make some friends!</h4>
-                <div class='button-box'>
-                    <a class='book' href="">Join Now</a>
+                <div class="button-box">
+                    <a class="book" href="#">Join Now</a>
                 </div>
             </section>
         </div>
