--- a/challenge_2/index.html
+++ b/challenge_2/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="styles/styles-challenge-two.css">
 </head>
 <body>
-    <div id= "content">
+    <div id="content">
         <header>
-        <img class="imagen-cabecera" src="https://byui-wdd.github.io/wdd130/ice/w05_circles.jpg" alt="imag-p">
+            <img class="imagen-cabecera" src="https://byui-wdd.github.io/wdd130/ice/w05_circles.jpg" alt="imag-p">
         </header>
-        <footer>
-            <img src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_desk.jpg" class="imagenredonda" alt="desk">
-            <img src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_graphic.png" alt="graphic">
-            <img src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_person.jpg" alt="person">     
-        </footer>
+        <main>
+            <ul class="flex-container">
+                <li class="flex-item"><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_desk.jpg" alt="desk"></li>
+                <li class="flex-item"><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_graphic.png" alt="graphic"></li>
+                <li class="flex-item"><img class="circle" src="https://byui-wdd.github.io/wdd130/ice/w05_ice_image_person.jpg" alt="person"></li>
+            </ul>
+        </main>
     </div>
 </body>
 </html>
