--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="#">Personal Website</a>
                 <a href="#">Personal Siteplan</a>
                 <a href="challenge/index.html">challengue</a>
+                <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
             </nav>
         </div>
     </Header> 
