--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <a href="aboutme/index.html">About Me Page</a>             
                 <a href="wwr/index.html">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-                <a href="#">Positioning Activity</a>
+                <!--<a href="#">Positioning Activity</a>
                 <a href="#">Personal Website</a>
-                <a href="#">Personal Siteplan</a>
-                <a href="challenge/index.html">challengue</a>
+                <a href="#">Personal Siteplan</a>*/
+                <a href="challenge/index.html">challengue</a>-->
                 <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
             </nav>
         </div>
