--- a/Personal Website Proposal/index.html
+++ b/Personal Website Proposal/index.html
@@ -20,6 +20,13 @@
     <hr>
     <img src="images/anita.png" alt="anita">
     <hr>
+    <p>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+          <img style="border:0;width:88px;height:31px"
+              src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+              alt="¡CSS Válido!" />
+      </a>
+    </p>
   </main>
 </body>
 </html>
