--- a/Personal Website Proposal/index.html
+++ b/Personal Website Proposal/index.html
@@ -13,10 +13,12 @@
   </header>
   <main>
     <hr>
-    <h3>Purpose</h3>
-    <p>The purpose of my personal website is to present my work and the skills that will qualify me for a position as a computer and web programmer.</p>
-    <h3>Audience</h3>
-    <p>The intended audience for my personal website is potential employers and people interested in hiring my services.</p>
+    <section>
+      <h3>Purpose</h3>
+      <p>The purpose of my personal website is to present my work and the skills that will qualify me for a position as a computer and web programmer.</p>
+      <h3>Audience</h3>
+      <p>The intended audience for my personal website is potential employers and people interested in hiring my services.</p>
+    </section>
     <hr>
     <img src="images/anita.png" alt="anita">
   </main>
