--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="#">Personal Siteplan</a>*/
                 <a href="challenge/index.html">challengue</a>-->
                 <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
+                <a href="challengue_3/index.html">3</a>
             </nav>
         </div>
     </Header> 
