--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 Home Page</title>
-    <link rel="stylesheet" href="styles/styles_wdd.css">
+  <meta charset="utf-8">
+  <title>Wdd 130</title>
+  <link type="text/css" rel="stylesheet" href="styles/styles_wdd.css">
 </head>
 <body>
-    <Header>
-        <div>
-            <img src="images/profile.png" class="imagenredonda" alt="profile">
-        </div>
-        <div>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="aboutme/index.html">About Me Page</a>             
-                <a href="wwr/index.html">White Water Rafting Website</a>
-                <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-                <!--<a href="#">Positioning Activity</a>
-                <a href="#">Personal Website</a>
-                <a href="#">Personal Siteplan</a>*/
-                <a href="challenge/index.html">challengue</a>-->
-                <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
-                <a href="challengue_3/index.html">3</a>
-            </nav>
-        </div>
-    </Header> 
-    <main>
-        <div>
-            <img src="images/banner_1.png" alt="banner image 1">
-        </div>
+  <header>
+    <h1>Analina Del Vecchio</h1>
+    <h2>WDD 130-B5</h2>
+  </header>
+  <main>
+    <hr>
+    <section>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="aboutme/index.html">About Me Page</a>             
+            <a href="wwr/index.html">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <!--<a href="#">Positioning Activity</a>
+            <a href="#">Personal Website</a>
+            <a href="#">Personal Siteplan</a>*/
+            <a href="challenge/index.html">challengue</a>-->
+            <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
+            <a href="challengue_3/index.html">3</a>
+        </nav>
+    </section>
+    <hr>
+    <img class="img-circle" src="images/profile.png" alt="anita">
+    <hr>
+    <section>    
         <p class="mensaje_inspirador">“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
-    </main>
-    <footer>
-        <p>Analina Del Vecchio &copy; 2023</p>
-    </footer>  
+    </section>
+  </main>
 </body>
 </html>
+
+
+
+
+
