--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <a href="aboutme/index.html">About Me Page</a>             
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <!--<a href="#">Positioning Activity</a>
+            <a href="#">Positioning Activity</a>
             <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>*/
-            <a href="challenge/index.html">challengue</a>-->
+            <a href="#">Personal Siteplan</a>
+            <a href="challenge_1/index.html">Challengue 1</a>
+            <a href="challenge_2/index.html">Challengue 2</a>
+            <a href="challengue_3/index.html">Challengue 3</a>
             <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
-            <a href="challengue_3/index.html">3</a>
         </nav>
     </section>
     <hr>
@@ -35,8 +36,3 @@
   </main>
 </body>
 </html>
-
-
-
-
-
