--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Wdd 130</title>
-  <link type="text/css" rel="stylesheet" href="styles/styles_wdd.css">
+  <link type="text/css" rel="stylesheet" href="styles/styles_home_page.css">
 </head>
 <body>
   <header>
