--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="challenge_1/index.html">Challengue 1</a>
             <a href="challenge_2/index.html">Challengue 2</a>
             <a href="challengue_3/index.html">Challengue 3</a>
-            <a href="Personal Website Proposal/index.html">Personal Website Proposal</a>
+            <a href="personal_website_proposal/index.html">Personal Website Proposal</a>
         </nav>
     </section>
     <hr>
