--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="aboutme/index.html">About Me Page</a>             
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="#">Positioning Activity</a>
+            <a href="positioning_activity/positioning.html">Positioning Activity</a>
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
             <a href="challenge_1/index.html">Challengue 1</a>
