--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <hr>
-    <section>
+    <div>
         <nav>
             <a href="index.html">Home</a>
             <a href="aboutme/index.html">About Me Page</a>             
@@ -26,13 +26,13 @@
             <a href="challengue_3/index.html">Challengue 3</a>
             <a href="personal_website_proposal/index.html">Personal Website Proposal</a>
         </nav>
-    </section>
+    </div>
     <hr>
     <img class="img-circle" src="images/profile.png" alt="anita">
     <hr>
-    <section>    
+    <div>    
         <p class="mensaje_inspirador">“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
-    </section>
+    </div>
   </main>
 </body>
 </html>
