--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </header>
   <main>
     <hr>
-    <div>
+    <section>
+      <h1>Table of Contents</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="aboutme/index.html">About Me Page</a>             
@@ -26,13 +27,14 @@
             <a href="challengue_3/index.html">Challengue 3</a>
             <a href="personal_website_proposal/index.html">Personal Website Proposal</a>
         </nav>
-    </div>
+    </section>
     <hr>
     <img class="img-circle" src="images/profile.png" alt="anita">
     <hr>
-    <div>    
+    <section> 
+      <h1>Inspirational Phrase</h1>   
         <p class="mensaje_inspirador">“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</p>
-    </div>
+    </section>
   </main>
 </body>
 </html>
