--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img  src="images/raft_adventures_logo_1.png" alt="Raf Aventures logo">
+                <img class="logo" src="images/raft_adventures_logo_1.png" alt="Raf Aventures logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
