--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="positioning_activity/positioning.html">Positioning Activity</a>
-            <a href="personal_website_proposal/index.html">Personal Website Proposal</a>
-            <a href="#">Personal Siteplan</a>
-            <a href="#">Personal Website</a>
+            <a href="analina/site_plan_analina.html">Analina Site Plan</a>
             <a href="challenge_1/index.html">Challengue 1</a>
             <a href="challenge_2/index.html">Challengue 2</a>
             <a href="challengue_3/index.html">Challengue 3</a>
