--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -10,73 +10,68 @@
     <h1>Analina Site Plan</h1>
     <h2>Analina Del Vecchio</h2>
     <h2>WDD 130-B5</h2>
-      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
   </header>
   <main>
-      <!-- Steps 2-3 -->
     <hr>
     <section>
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <p>The purpose of my personal website is to present my work and the skills that will qualify me for a position as a computer and web programmer.</p>
-      <!-- change this -->
       <h3>Audience</h3>
       <p>The intended audience for my personal website is potential employers and people interested in hiring my services.</p>  <!-- change this -->
     </section>
     <hr>
-    <h2>Branding</h2>
-    <h3>Website Logo</h3>
-    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
+    <section>
+      <h2>Branding</h2>
+      <h3>Website Logo</h3>
+    </section>
     <img src="images/cookie.png" alt="Logo image">
     <hr>
-    <h2>
-      Style Guide
-    </h2>
-    <!-- Steps 4-8 -->
-    <h3>
-      Color Palette
-    </h3>
-    <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-    <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-    Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <section>
+      <h2>
+        Style Guide
+      </h2>
+      <h3>
+        Color Palette
+      </h3>
+      <p> Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
+    </section>
     <table class="colors">
       <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
     </table>
-    <!-- ------------------------Step 9------------------------------ -->
-    <h3>
+    <section>
+      <h3>
         Typography
-    </h3>
-    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
-    <h4>
-      Heading Font: [Font Name here]  <!-- change this -->
-    </h4>
-    <h4>
-      Paragraph Font: [Font Name here]  <!-- change this -->
-    </h4>
-    <h3>
-      Normal paragraph example
-    </h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <h3>
-      Colored paragraph example
-    </h3>
-    <p class="colored">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-    </p>
-    <!-- ------------------------Step 10------------------------------ -->
-    <h3>
-      Navigation
-    </h3>
-    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
-      <a href="#">Page3</a>
-    </nav>
+      </h3>
+      <h4>
+        Heading Font: [Font Name here]  <!-- change this -->
+      </h4>
+      <h4>
+        Paragraph Font: [Font Name here]  <!-- change this -->
+      </h4>
+      <h3>
+        Normal paragraph example
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <h3>
+        Colored paragraph example
+      </h3>
+      <p class="colored">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      </p>
+      <h3>
+        Navigation
+      </h3>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Page2</a>
+        <a href="#">Page3</a>
+      </nav>
+    </section>
     <hr>
     <h2>
       Site Map
