--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -37,9 +37,8 @@
       <p> Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
     </section>
     <table class="colors">
-      <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
-      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-      <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+      <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th><th>Accent 4</th></tr>
+      <tr><td class="primary">[#EBBFD7]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2">[#A43312]</td> <td class="accent3">[#A43312]</tr> <td class="accent4">[#A43312]</tr></tr>
     </table>
     <section>
       <h3>
