--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -36,10 +36,12 @@
       </h3>
       <p> Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
     </section>
+    <!-- Table of colors -->
     <table class="colors">
-      <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th><th>Accent 4</th></tr>
-      <tr><td class="primary">[#EBBFD7]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2">[#A43312]</td> <td class="accent3">[#A43312]</tr> <td class="accent4">[#A43312]</tr></tr>
+      <tr> <th>Primary</th> <th>Secondary</th> <th>Accent 1</th> <th>Accent 2</th> <th>Accent 3</th> <th>Accent 4</th> </tr>
+      <tr> <td class="primary">[#EBBFD7]</td> <td class="secondary">[#E7C24F]</td> <td class="accent1">[#A43312]</td> <td class="accent2">[#A43312]</td> <td class="accent3">[#A43312]</td> <td class="accent4">[#A43312]</td> </tr>
     </table>
+    <!-- Table of colors final-->
     <section>
       <h3>
         Typography
