--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -34,7 +34,7 @@
       <h3>
         Color Palette
       </h3>
-      <p> Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
+      <p> Palette URL: <a href="https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-a5deff-c4edb3" target="_blank">https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-a5deff-c4edb3</a></p>
     </section>
     <!-- Table of colors -->
     <table class="colors">
@@ -47,10 +47,10 @@
         Typography
       </h3>
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Playfair Display
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Montserrat
       </h4>
       <h3>
         Normal paragraph example
@@ -97,7 +97,7 @@
         &nbsp;
       </div>
     </div>
-      <!-- --------Content Section -------------- -->
+      <!-- Content Section -->
     <hr>
     <h2>
       Content
