--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -38,8 +38,22 @@
     </section>
     <!-- Table of colors -->
     <table class="colors">
-      <tr> <th>Primary</th> <th>Secondary</th> <th>Accent 1</th> <th>Accent 2</th> <th>Accent 3</th> <th>Accent 4</th> </tr>
-      <tr> <td class="primary">[#EBBFD7]</td> <td class="secondary">[#E7C24F]</td> <td class="accent1">[#A43312]</td> <td class="accent2">[#A43312]</td> <td class="accent3">[#A43312]</td> <td class="accent4">[#A43312]</td> </tr>
+      <tr> 
+        <th>Primary</th> 
+        <th>Secondary</th> 
+        <th>Accent 1</th> 
+        <th>Accent 2</th> 
+        <th>Accent 3</th> 
+        <th>Accent 4</th> 
+      </tr>
+      <tr>
+        <td class="primary">[#EBBFD7]</td> 
+        <td class="secondary">[#E7C24F]</td> 
+        <td class="accent1">[#A43312]</td> 
+        <td class="accent2">[#A43312]</td> 
+        <td class="accent3">[#A43312]</td> 
+        <td class="accent4">[#A43312]</td> 
+      </tr>
     </table>
     <!-- Table of colors final-->
     <section>
