--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -12,6 +12,7 @@
     <h2>WDD 130-B5</h2>
   </header>
   <main>
+<!-- Linea Divisoria -->
     <hr>
     <section>
       <h2>Overview</h2>
@@ -20,12 +21,14 @@
       <h3>Audience</h3>
       <p>The intended audience for my personal website is potential employers and people interested in hiring my services.</p>  <!-- change this -->
     </section>
+<!-- Linea Divisoria -->
     <hr>
     <section>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
     </section>
     <img src="images/cookie.png" alt="Logo image">
+<!-- Linea Divisoria -->
     <hr>
     <section>
       <h2>
@@ -36,7 +39,7 @@
       </h3>
       <p> Palette URL: <a href="https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-a5deff-c4edb3" target="_blank">https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-a5deff-c4edb3</a></p>
     </section>
-    <!-- Table of colors -->
+<!-- Table of colors -->
     <table class="colors">
       <tr> 
         <th>Primary</th> 
@@ -55,7 +58,7 @@
         <td class="accent4">[#A43312]</td> 
       </tr>
     </table>
-    <!-- Table of colors final-->
+<!-- Table of colors final-->
     <section>
       <h3>
         Typography
@@ -87,7 +90,9 @@
         <a href="#">Page3</a>
       </nav>
     </section>
+<!-- Linea Divisoria -->
     <hr>
+    <section>
     <h2>
       Site Map
     </h2>
@@ -111,8 +116,10 @@
         &nbsp;
       </div>
     </div>
-      <!-- Content Section -->
+    </section>
+<!-- Linea Divisoria -->
     <hr>
+    <section>
     <h2>
       Content
     </h2>
@@ -140,7 +147,10 @@
       <img src="#" alt="image for page3">
       <img src="#" alt="image for page3">
     </ul>
+    </section>
+<!-- Linea Divisoria -->
     <hr>
+    <section>
     <h2>
       Wireframes
     </h2>
@@ -161,6 +171,7 @@
       [Any additional details about page 3 that the wireframe does not make clear]
     </p>
     <img src="#" alt="page 3 wireframe">
+    </section>
     </main>
   </body>
 </html>
