--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -37,7 +37,7 @@
       <h3>
         Color Palette
       </h3>
-      <p> Palette URL: <a href="https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-a5deff-c4edb3" target="_blank">https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-a5deff-c4edb3</a></p>
+      <p> Palette URL: <a href="https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-c4edb3-a5deff" target="_blank">https://coolors.co/ffffff-000000-ebbfd7-fbf0a4-c4edb3-a5deff</a></p>
     </section>
 <!-- Table of colors -->
     <table class="colors">
@@ -50,12 +50,12 @@
         <th>Accent 4</th> 
       </tr>
       <tr>
-        <td class="primary">[#EBBFD7]</td> 
-        <td class="secondary">[#E7C24F]</td> 
-        <td class="accent1">[#A43312]</td> 
-        <td class="accent2">[#A43312]</td> 
-        <td class="accent3">[#A43312]</td> 
-        <td class="accent4">[#A43312]</td> 
+        <td class="primary">[#FFFFFF]</td> 
+        <td class="secondary">[#000000]</td> 
+        <td class="accent1">[#EBBFD7]</td> 
+        <td class="accent2">[#FBF0A4]</td> 
+        <td class="accent3">[#C4EDB3]</td> 
+        <td class="accent4">[#A5DEFF]</td> 
       </tr>
     </table>
 <!-- Table of colors final-->
