--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -128,24 +128,24 @@
       [Written copy for the home page here]
     </p>
     <p>Images for the Home page</p>
-      <img src="#" alt="image for homepage">
-      <img src="#" alt="image for homepage">
+      <img src="images/coming_soon.png" alt="image for homepage">
+      <img src="images/coming_soon.png" alt="image for homepage">
     </ul>
     <h3>[Page 2]</h3>
     <p>
       [Written copy for the Page 2 here]
     </p>
     <p>Images for the Page 2</p>
-      <img src="#" alt="image for page">
-      <img src="#" alt="image for page">
+      <img src="images/coming_soon.png" alt="image for page">
+      <img src="images/coming_soon.png" alt="image for page">
     </ul>
     <h3>[Page 3]</h3>
     <p>
       [Written copy for the Page 3 here]
     </p>
     <p>Images for the Page 3</p>
-      <img src="#" alt="image for page3">
-      <img src="#" alt="image for page3">
+      <img src="images/coming_soon.png" alt="image for page3">
+      <img src="images/coming_soon.png" alt="image for page3">
     </ul>
     </section>
 <!-- Linea Divisoria -->
@@ -160,17 +160,17 @@
     <p>         
       [Any additional details about home that the wireframe does not make clear]
     </p>
-    <img src="#" alt="home page wireframe">
+    <img src="images/coming_soon.png" alt="home page wireframe">
     <h3>[Page 2]</h3>
     <p>         
       [Any additional details about page 2 that the wireframe does not make clear]
     </p>
-    <img src="#" alt="page 2 wireframe">
+    <img src="images/coming_soon.png" alt="page 2 wireframe">
     <h3>[Page 3]</h3>
     <p>         
       [Any additional details about page 3 that the wireframe does not make clear]
     </p>
-    <img src="#" alt="page 3 wireframe">
+    <img src="images/coming_soon.png" alt="page 3 wireframe">
     </section>
     </main>
   </body>
