--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -74,7 +74,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Trips</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr>
@@ -82,7 +82,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Trips
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -95,7 +95,8 @@
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
     <h3>Home</h3>
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
-    <h3>[Page 2]</h3>
+    <h3>Trips</h3>
+    <img src="images/wireframe_analina.png" alt="trips wireframe">
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
