--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -141,10 +141,10 @@
     Project description: Company dedicated to providing brand design, tutoring and software development services.</p>
     </p>
     <h3>Images for the Analina page</h3>
-      <img src="images/analina_nielsen.png" alt="Anita Nielsen"><br>
-      <img src="images/doma.png" alt="Doma Bohemian Furniture"><br>
-      <img src="images/my_hair.png" alt="My Hair by Sandra"><br>
-      <img src="images/your_design.png" alt="Your Designer Friends">
+      <img src="images/analina_nielsen.png" alt="anita nielsen"><br>
+      <img src="images/doma.png" alt="doma bohemian furniture"><br>
+      <img src="images/my_hair.png" alt="my hair by sandra"><br>
+      <img src="images/your_design.png" alt="your designer friends">
     <h3>About me</h3>
     <p>
       Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development.<br> 
@@ -154,8 +154,8 @@
       When I graduated from high school I was willing to study Medicine following that part of me that is inclined to help others, however, I realized that medicine took a lot of time away from my family. My mother is a widow and, being the eldest daughter, I felt the obligation to support her with my little brothers, so I changed schools and began my degree in Public Accounting. There I learned a very important lesson: order facilitates transparency and numbers do not lie. One of my favorite subjects was economics. My teacher was a little crazy man but he was a genius. I learned that an economist is capable of predicting the future and that helped me to be more careful and keep in mind that every decision will have a consequence. During this stage, my mother and I managed to have our own business, a beauty business. I fulfilled the responsibilities of manager, accounting bookkeeping, among others. In 2008, something happened that marked my life forever. I left university and also the family business. At that moment I learned that in life there are ups and downs. I spent a couple of years working as a salesperson in stores which taught me how to deal with the public, be friendly and develop humility. In 2016 I worked as a manager in a designer store, where I learned a lot about design, artistic composition and took some marketing and visual merchandising design courses. Right at that moment it was a time of great crisis in my native country Venezuela, inflation reached 1,370,000% according to the estimates of the International Monetary Fund (IMF), it is something difficult to believe but it happened and I lived it. I learned to work under a lot of pressure, sometimes I had to change product prices 3 or more times a day. I remember it when I went to the movies with my mother and saw how the popcorn changed prices while we were in line. I am a person who, like anyone else, feels love for the place where we were born, but I learned to have resilience and accept changes, also that the strength of Faith is focused on our actions and the confidence of being guided by God. In 2019, with many tears in my eyes, I left my country and went to Panama. I arrived with all my capital, $20, and a great desire to improve the situation in my life. I don't remember how many resumes I handed in the first week. I didn't have legal status. So it was difficult to find a job. I remember that I read an advertisement in English. At this time I learned a very important lesson, he who perseveres wins, I managed to have this job as a domestic worker for a company that develops government renewable energy projects. I had my own room with a bathroom, a beautiful view of the sea, all my meals covered, and a decent salary to help my mother and little brother in Venezuela. I still feel very grateful to my Heavenly Father for that job, my bosses were like my family. During the pandemic, while many people lost their jobs, I was blessed to have support for my family. I also learned culinary art and many delicious Chinese recipes. During my free time at work I started studying Cpanel, Wordpress, Social media advertising, Application programming interface (API) key and Web Programming on my own. I created some ecommerce and configured payment gateways and I also met the love of my life who today is my beloved husband. Sometimes life takes us down unknown paths often filled with regret, but we should never doubt that we are on the right path. I am currently improving my programming knowledge studying at BYU Idaho, thanks to a program called BYU Pathway Worldwide that is a miracle in my life. If you are looking for someone who will give you 100% at work, contact me, I will be happy to help. Let the connections begin!
     </p>
     <h3>Images for the About me Page</h3>
-      <img src="images/anita.png" alt="Anita"><br>
-      <img src="images/cookie_2.png" alt="Cookie 2">
+      <img src="images/anita.png" alt="anita"><br>
+      <img src="images/cookie_2.png" alt="cookie 2">
     <h3>[Page 3]</h3>
     <h3>Contact</h3>
     <p>
@@ -168,10 +168,10 @@
       Follow me on my social networks
     </p>
     <h3>Images for the Contact Page</h3>
-      <img src="images/coming_soon.png" alt="image for page3">
-      <img src="images/coming_soon.png" alt="image for page3">
-      <img src="images/coming_soon.png" alt="image for page3">
-      <img src="images/coming_soon.png" alt="image for page3">
+      <img src="images/instagram.png" alt="instagram">
+      <img src="images/facebook.png" alt="facebook">
+      <img src="images/github.png" alt="github">
+      <img src="images/email.png" alt="email">
     </section>
 <!-- Linea Divisoria -->
     <hr>
