--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -168,9 +168,9 @@
       Follow me on my social networks
     </p>
     <h3>Images for the Contact Page</h3>
-      <img src="images/instagram.png" alt="instagram">
-      <img src="images/facebook.png" alt="facebook">
-      <img src="images/github.png" alt="github">
+      <img src="images/instagram.png" alt="instagram"><br>
+      <img src="images/facebook.png" alt="facebook"><br>
+      <img src="images/github.png" alt="github"><br>
       <img src="images/email.png" alt="email">
     </section>
 <!-- Linea Divisoria -->
